--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,13 @@ h2 {
   font-size: 42px;
 }
 
+h3 {
+  font-family: 'Dela Gothic One', sans-serif;
+  font-size: 2.625rem;
+  margin-bottom: 1.5rem;
+}
+
 h2,
-h3,
 p {
   margin: 0;
 }
@@ -125,5 +130,8 @@ a:hover {
   }
   h1 {
     font-size: 24px;
+  }
+  h3 {
+    font-size: 1.5rem;
   }
 }
