--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Inter:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&family=Londrina+Solid&display=swap');
 
 :root {
   --black: rgb(48, 44, 41);
@@ -41,9 +42,44 @@ h3 {
   margin-bottom: 1.5rem;
 }
 
+h4 {
+  font-family: 'Dela Gothic One', sans-serif;
+  font-size: 2rem;
+  margin-bottom: 1.25rem;
+}
+
+h5 {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
 h2,
 p {
   margin: 0;
+}
+
+.weight-600 {
+  font-weight: 600;
+}
+
+.text-grey {
+  color: #6D6D6F;
+}
+
+.weight-700 {
+  font-weight: 700;
+}
+
+.londrina {
+  font-family: 'Londrina Solid', sans-serif;
+}
+
+.courier-prime {
+  font-family: 'Courier Prime', monospace;
+}
+
+.font-2rem {
+  font-size: 2rem !important;
 }
 
 ul {
