--- a/src/components/Projects/ProjectPages/ProjectPage.css
+++ b/src/components/Projects/ProjectPages/ProjectPage.css
@@ -3,6 +3,10 @@
   margin: 0 auto 0 auto;
 }
 
+.case-study-container >:last-child {
+  margin-bottom: 0;
+}
+
 .case-study-section {
   margin: 80px 0;
 }
@@ -54,6 +58,12 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 16px;
+}
+
+.video-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media screen and (max-width: 750px) {
