--- a/src/components/Projects/ProjectPages/ProjectPage.css
+++ b/src/components/Projects/ProjectPages/ProjectPage.css
@@ -7,10 +7,6 @@
   margin-bottom: 0;
 }
 
-.case-study-section {
-  margin: 80px 0;
-}
-
 .cover-image {
   width: 100%;
   border-radius: 16px;
@@ -64,9 +60,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 80px;
 }
 
+.img-80 {
+  width: 80%;
+  display: block;
+  margin: 48px auto 0 auto;
+}
 @media screen and (max-width: 750px) {
   .color-font-info {
     grid-template-columns: 1fr;
