--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Inter:wght@400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&family=Londrina+Solid&display=swap');
 
+
+/* ------------ CONTAINERS  */
 :root {
   --black: rgb(48, 44, 41);
   --orange: #df7861;
@@ -21,9 +23,21 @@ body {
   padding: 80px 0 80px 0;
 }
 
+.extra-bottom-padding {
+  padding-bottom: 200px;
+}
+
 html {
   scroll-behavior: smooth;
 }
+
+
+.wrapper-background {
+  margin: 0 auto;
+  border-radius: 100px 100px 0 0;
+}
+
+/* ------------------- TYPE */
 
 h1 {
   font-family: 'Dela Gothic One', sans-serif;
@@ -58,6 +72,10 @@ p {
   margin: 0;
 }
 
+p {
+  line-height: 160%;
+}
+
 .weight-600 {
   font-weight: 600;
 }
@@ -85,6 +103,8 @@ p {
   font-size: 1.5rem !important;
 }
 
+/* ------------------------ LISTS */
+
 ul {
   margin: 0;
   margin-right: 70px;
@@ -104,9 +124,16 @@ li span {
   vertical-align: middle;
 }
 
+
+/* --------------- LINKS */
 a:hover {
   text-decoration: none;
 }
+
+.tab-link:focus-visible {
+  outline: 4px solid var(--black);
+}
+/* -----------------LOGO */
 
 #logo-personal {
   display: flex;
@@ -120,14 +147,7 @@ a:hover {
   width: 80%;
 }
 
-.tab-link:focus-visible {
-  outline: 4px solid var(--black);
-}
-
-.wrapper-background {
-  margin: 0 auto;
-  border-radius: 100px 100px 0 0;
-}
+/* ---------------- RESPONSIVENESS */
 
 @media screen and (max-width: 950px) {
   .wrapper-background {
@@ -157,6 +177,14 @@ a:hover {
   }
   h1 {
     font-size: 36px;
+  }
+}
+@media screen and (max-width: 500px) {
+  h4 {
+    font-size: 1.5rem;
+  }
+  h5 {
+    font-size: 1.25rem;
   }
 }
 @media screen and (max-width: 450px) {
