--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -15,6 +15,10 @@
   font-size: 1.5rem;
 }
 
+.contact-container.text-white a {
+color: white !important;
+}
+
 .extra-paragraph {
   font-size: 1.5rem;
 }
