--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 
 /* ------------ CONTAINERS  */
@@ -119,6 +120,9 @@ p {
 }
 .rocksalt {
   font-family: "Rock Salt", cursive;
+}
+.dmsans {
+  font-family: "DM Sans", sans-serif;
 }
 
 .font-2rem {
