Fix footer responsiveness

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -42,3 +42,16 @@
     font-size: 1rem;
   }
 }
+@media screen and (max-width: 500px) {
+  .footer, .social-links {
+    flex-direction: column;
+    gap: 16px;
+  }
+  .social-links {
+    margin-bottom: 32px;
+  }
+  #scroll-contact {
+    padding-bottom: 40px;
+  }
+
+}
