--- a/src/components/Projects/ProjectPages/ProjectPage.css
+++ b/src/components/Projects/ProjectPages/ProjectPage.css
@@ -94,8 +94,22 @@
 
 .user-quote img {
   width: 80px;
-  /* border: 1px solid #D0CAE4;
-  border-radius: 100px; */
+}
+
+.wireframe-container-main {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  align-items: flex-start;
+}
+.wireframe-container-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#prototype {
+  width: 300px;
 }
 
 /* ------ MOVIE CASE STUDY */
@@ -119,12 +133,19 @@
   top: 73px;
   left: 8%;
 }
-/* ----------------------------- */
 
+
+/* -----------RESPONSIVENESS------------------ */
 
 @media screen and (max-width: 1000px) {
   #ipad {
     top: 80px;
+  }
+}
+@media screen and (max-width: 900px) {
+  .wireframe-container-main {
+    flex-direction: column;
+    align-items: center;
   }
 }
 @media screen and (max-width: 750px) {
@@ -166,6 +187,9 @@
   #uxjobsboard-arrow {
     width: 100%;
     margin: 0;
+  }
+  #prototype {
+    width: 200px;
   }
 }
 @media screen and (max-width: 400px) {
