--- a/src/components/Projects/ProjectPages/ProjectPage.css
+++ b/src/components/Projects/ProjectPages/ProjectPage.css
@@ -83,17 +83,16 @@
 }
 
 .user-quote {
-  border: 1px solid #D0CAE4;
-  border-radius: 100px;
+  border-radius: 16px;
   display: flex;
   align-items: center;
-  gap: 12px;
-  padding: 12px 32px 12px 12px;
+  gap: 24px;
+  padding: 12px 32px 12px 16px;
   background-color: white;
 }
 
 .user-quote img {
-  width: 80px;
+  width: 50px;
 }
 
 .wireframe-container-main {
@@ -110,6 +109,27 @@
 
 #prototype {
   width: 300px;
+}
+
+#task {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  background-color: #8D53D9;
+  border-radius: 16px;
+  font-size: 1rem;
+  padding: 24px;
+}
+
+#task svg {
+  min-width: 40px;
+  max-width: 40px;
+}
+
+#laptop {
+  position: absolute;
+  top: 60px;
+  right: 5%;
 }
 
 /* ------ MOVIE CASE STUDY */
@@ -147,7 +167,12 @@
     flex-direction: column;
     align-items: center;
   }
+  #laptop {
+    top: 80%;
+    rotate: 50deg;
+  }
 }
+
 @media screen and (max-width: 750px) {
   .color-font-info {
     grid-template-columns: 1fr;
