--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -13,7 +13,7 @@
 
 .intro-bottom {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 120px;
   font-size: 1.5rem;
 }
