--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,12 +1,11 @@
 .intro-container {
-  padding: 25% 0 80px 0;
+  /* padding: 25% 0 80px 0; */
   display: flex;
   flex-direction: column;
-  /* width: 100%; */
 }
 
 .intro-top {
-  margin-bottom: 80px;
+  margin: 50px 0 60px 0;
   line-height: 1.4em;
   font-size: 2rem;
 }
@@ -50,5 +49,8 @@
     flex-direction: column;
     gap: 32px;
     font-size: 1rem;
+  }
+  .intro-top {
+    margin: 10px 0 20px 0;
   }
 }
