--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,12 @@ h5 {
   margin-bottom: 1rem;
 }
 
+h6 {
+  font-family: 'Dela Gothic One', sans-serif;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
 h2,
 p {
   margin: 0;
@@ -210,6 +216,13 @@ a:hover {
     font-size: 48px;
   }
 }
+
+@media screen and (max-width: 700px) {
+  h6 {
+      font-size: 1.25rem;
+    }
+}
+
 @media screen and (max-width: 600px) {
   .main-container {
     padding-top: 60px;
