--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,36 +1,48 @@
-#scroll-about p {
-  font-size: 1.5rem;
-}
 .skills-container {
-  display: flex;
-  gap: 100px;
+  column-count: 3;
 }
 
 #profile-image {
-  max-width: 300px;
+  max-width: 150px;
+  max-height: 150px;
   border-radius: 16px;
   margin-bottom: 40px;
+  margin-left: 20px;
 }
 .about-section {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 3fr;
   gap: 100px;
 }
+.about-inner {
+  display: flex;
+}
 
-@media screen  and (max-width: 900px ) {
+@media screen  and (max-width: 1100px ) {
   .about-section {
     gap: 40px;
   }
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .skills-container {
-    flex-direction: column;
-    gap: 0;
+    column-count: 2;
   }
 }
 @media screen and (max-width: 750px) {
   .about-section {
     grid-template-columns: 1fr;
-
+    gap: 20px;
   }
+  .about-inner {
+    display: inline;
+  }
+  #profile-image {
+    margin-top: 20px;
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 600px) {
+  .skills-container {
+      column-count: 1;
+    }
 }
