--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ html {
 
 .wrapper-background {
   margin: 0 auto;
-  border-radius: 100px 100px 0 0;
+  /* border-radius: 100px 100px 0 0; */
 }
 
 /* ------------------- TYPE */
