--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,7 +14,7 @@
 
 header {
   position: sticky;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
