--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -25,6 +25,12 @@ color: white !important;
   text-transform: none;
 }
 
+#scroll-contact:before {
+  height: 40px;
+  content: "";
+  display: block;
+}
+
 
 /* MIN-WIDTH */
 @media screen and (min-width: 551px) {
