--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -17,7 +17,11 @@
 .about-inner {
   display: flex;
 }
-
+#scroll-about:before {
+  height: 40px;
+  content: "";
+  display: block;
+}
 @media screen  and (max-width: 1100px ) {
   .about-section {
     gap: 40px;
