--- a/src/components/Projects/IllustrationsPage/IllustrationItem.css
+++ b/src/components/Projects/IllustrationsPage/IllustrationItem.css
@@ -16,7 +16,6 @@
 
 .illustration {
   width: 70%;
-  /* border-radius: 8px; */
 }
 
 .illustration-container:nth-child(even) {
@@ -28,4 +27,9 @@
 .illustration-container:nth-child(odd) {
   margin-left: 0;
   margin-right: auto;
+}
+@media screen and (max-width: 550px) {
+  .illustration {
+    width: 100%;
+  }
 }
