--- a/src/components/Projects/IllustrationsPage/IllustrationItem.css
+++ b/src/components/Projects/IllustrationsPage/IllustrationItem.css
@@ -1,6 +1,5 @@
 .illustrations-container {
   margin: 0 auto 0 auto;
-  /* max-width: 1200px; */
 }
 
 .illustration-container {
@@ -15,7 +14,7 @@
 }
 
 .illustration {
-  width: 70%;
+  max-width: 500px;
 }
 
 .illustration-container:nth-child(even) {
@@ -27,9 +26,4 @@
 .illustration-container:nth-child(odd) {
   margin-left: 0;
   margin-right: auto;
-}
-@media screen and (max-width: 550px) {
-  .illustration {
-    width: 100%;
-  }
 }
