--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 /* ------------ CONTAINERS  */
 :root {
